[package]
edition = "2021"
name = "panic-no-std"
version = "0.1.0"
rust-version = "1.82"
authors = ["warlock <internalmike@gmail.com>"]
description = "Panic handler for `no_std` apps."
readme = "README.md"
documentation = "https://docs.rs/panic-no-std/"
keywords = ["panic", "no_std", "panic_handler", "windows", "linux"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/panic-no-std"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
exit-no-std = "0.2.1"

[target.'cfg(target_os="dos")'.dependencies]
pc-ints = "0.3.5"

[target.'cfg(all(not(target_os="dos"), not(windows)))'.dependencies]
libc = { version = "0.2.139", default-features = false }

[target.'cfg(all(not(target_os="dos"), windows))'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "processenv", "winbase"] }

[badges]
maintenance = { status = "passively-maintained" }
