[package]
edition = "2021"
name = "hinpan"
version = "0.0.0"
publish = false

[lints.rust]
unexpected_cfgs = { level = "allow" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
panic-no-std = { path = "../.." }

[target.'cfg(dos)'.dependencies]
exit-no-std = "0.3.0"
rlibc-ext = "0.3.1"
